--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <hr>
     <div class="container  text-center">
     <div class="row gap-5 mb-3 " >
-    <div class="col-lg-6 text-warning">Copyright © 2024 Blue Ocean Sports Arena</div>
+    <div class="col-lg-6 text-warning">Copyright © 2024 MK ASSOCIATES</div>
     <div class="col-lg-5 text-warning"> Developed by Spark Web Tech</div>
     </div>
     </div>
