--- a/Bussinesh.html
+++ b/Bussinesh.html
@@ -81,8 +81,20 @@
       <li class="nav-item">
         <a class="nav-link" id="cbill-tab" data-toggle="tab" href="#bill" role="tab" aria-controls="bill" aria-selected="false">Iot ESIM</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" id="SIM-tab" data-toggle="tab" href="#SIM" role="tab" aria-controls="SIM" aria-selected="false">Iot ESIM</a>
+  </li>
   </ul>
   <div class="tab-content mt-3" id="myTabContent">
+    <div class="tab-pane fade" id="SIM" role="tabpanel" aria-labelledby="profile-tab">
+      <h1>We provide VIP sim-card </h1>
+      <h1>We provide GPS sim-card </h1>
+      <h1>We provide M2M sim-card </h1>
+      <div class="contact text-center mt-5 mb-5 container-fluid bg-dark">
+        <h3 class="fs-1 fw-bold text-light pt-5">You want ot know more details call now </h3>
+        <button class="btn btn-danger mb-5 fw-bold" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">(+91)90470 98286</button>
+      </div>
+  </div>
       <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
           <h3 class="fs-1 fw-bold">Vi Cloud Managed Services & Cloud Telephony</h3>
           <!-- <p class="fs-3">All Vi max postpaid plans include :  Unlimited Calls  |  National Roaming  |  3000 SMS per month</p> -->
