--- a/Bussinesh.html
+++ b/Bussinesh.html
@@ -82,14 +82,14 @@
         <a class="nav-link" id="cbill-tab" data-toggle="tab" href="#bill" role="tab" aria-controls="bill" aria-selected="false">Iot ESIM</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" id="SIM-tab" data-toggle="tab" href="#SIM" role="tab" aria-controls="SIM" aria-selected="false">Iot ESIM</a>
+      <a class="nav-link" id="SIM-tab" data-toggle="tab" href="#SIM" role="tab" aria-controls="SIM" aria-selected="false">SIM-cards</a>
   </li>
   </ul>
   <div class="tab-content mt-3" id="myTabContent">
     <div class="tab-pane fade" id="SIM" role="tabpanel" aria-labelledby="profile-tab">
-      <h1>We provide VIP sim-card </h1>
-      <h1>We provide GPS sim-card </h1>
-      <h1>We provide M2M sim-card </h1>
+      <h1 class="fw-bold">We provide VIP sim-card </h1>
+      <h1 class="fw-bold">We provide GPS sim-card </h1>
+      <h1 class="fw-bold">We provide M2M sim-card </h1>
       <div class="contact text-center mt-5 mb-5 container-fluid bg-dark">
         <h3 class="fs-1 fw-bold text-light pt-5">You want ot know more details call now </h3>
         <button class="btn btn-danger mb-5 fw-bold" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">(+91)90470 98286</button>
