--- a/Postpaid.html
+++ b/Postpaid.html
@@ -497,7 +497,9 @@
       <h3 class="fw-bold">Address</h3>
       <p>92/1, p.no18E, Arun Nagar, Kosakulam, Madurai, Tamil Nadu 625017</b>
         call: (+91)90470 98286, 
-        9843407574
+        9843407574.
+        Email: mkassociatesvi@gmail.com
+
       </p>
   </div>
   </div>
