--- a/Postpaid.html
+++ b/Postpaid.html
@@ -477,13 +477,13 @@
       <div class=" col-lg-4 text-center mt-5 ">
       <img src="./assets/vi logo 2-01.png" style="margin-left: 2em;" width="80" height="auto" alt="">
       <p class="fs-3 fw-bold">MK ASSOCIATES</p>
-      <p>Vodafone & IDEA MINI STORE</p>  
+      <p>Vodafone & IDEA MINI STORE</p> 
   </div>
   
   <div class="col-lg-4  text-center mt-2 mb-5 ">
       <h3 class="sm-me-5 mt-5 pt-5 fw-bold">Quick Links</h3>
     <div class="content2 mt-3">
-      <ul class="d-flex flex-row flex-wrap gap-4 ">
+      <ul class="d-flex justify-content-center text-center flex-wrap gap-4 ">
        <li> <a href="index.html" >Home</a></li>
        <li> <a href="About.html">About</a></li>
        <li><a href="Servicecs.html">Services</a></li>
@@ -495,12 +495,12 @@
   </div>
   <div class="col-lg-3  text-center mt-5 pt-5 ">
       <h3 class="fw-bold">Address</h3>
-      <p>92/1, p.no18E, Arun Nagar, Kosakulam, Madurai, Tamil Nadu 625017</b>
-        call: (+91)90470 98286, 
-        9843407574.
-        Email: mkassociatesvi@gmail.com
-
-      </p>
+        <p>92/1, p.no18E, Arun Nagar, Kosakulam, Madurai, Tamil Nadu 625017 <br>
+           <span>Email: mkassociatesvi@gmail.com</span><br>
+      <span>  call: (+91)90470 98286, 9843407574.</span>
+      </span>
+      </p>          
+    
   </div>
   </div>
   <hr>
