--- a/Postpaid.html
+++ b/Postpaid.html
@@ -37,7 +37,7 @@
                 <a class="nav-link nav-ll bg-danger" href="./Postpaid.html" >Postpaid</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-ll" href="./Bussinesh.html" >Bussinesh</a>
+                <a class="nav-link nav-ll" href="./Bussinesh.html" >Business</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link nav-ll " href="./Gallery.html" >Gallery</a>
