--- a/Bussinesh.html
+++ b/Bussinesh.html
@@ -31,7 +31,7 @@
                 <a class="nav-link nav-ll " href="./Postpaid.html" >Postpaid</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-ll bg-danger" href="./Bussinesh.html" >Bussinesh</a>
+                <a class="nav-link nav-ll bg-danger" href="./Bussinesh.html" >Business</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link nav-ll " href="./Gallery.html" >Gallery</a>
