--- a/Gallery.html
+++ b/Gallery.html
@@ -32,7 +32,7 @@
             <a class="nav-link nav-ll " href="./Postpaid.html" >Postpaid</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link nav-ll " href="./Bussinesh.html" >Bussinesh</a>
+            <a class="nav-link nav-ll " href="./Bussinesh.html" >Business</a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-ll bg-danger" href="./Gallery.html" >Gallery</a>
