--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="./Postpaid.html" >Postpaid</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Bussinesh.html" >Bussinesh</a>
+                <a class="nav-link" href="./Bussinesh.html" >Business</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link  " href="./Gallery.html" >Gallery</a>
