--- a/Prepaid.html
+++ b/Prepaid.html
@@ -808,7 +808,7 @@
 </div>
 </div>
 <!-- footer -->
-<footer class="container-fluid bg-dark text-light " width="100%" heigh="auto">
+<footer class="container-fluid bg-dark text-light mb-0 " width="100%" heigh="auto">
   <div class="row ">
       <div class=" col-lg-4 text-center mt-5 ">
       <img src="./assets/vi logo 2-01.png" style="margin-left: 2em;" width="80" height="auto" alt="">
@@ -840,7 +840,7 @@
   </div>
   </div>
   <hr>
-  <div class="container  text-center">
+  <div class="container  text-center pb-2">
   <div class="row gap-5 mb-3 " >
   <div class="col-lg-6 text-warning">Copyright © 2024 MK ASSOCIATES</div>
   <div class="col-lg-5 text-warning"> Developed by Spark Web Tech</div>
