--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
       <h1 class="fw-bold text-center mt-4">SERVICES
       </h1>
-      <div class="container d-flex flex-wrap justify-content-center">
-        <img src="./assets/service.png" alt="" class="d-flex flex-wrap  w-50">
-
+      <div class="container d-flex flex-wrap flex-column">
+        <img src="./assets/service.png" alt="" class="d-flex flex-wrap  w-100">
+          <img src="./assets/number.jpeg" alt="" class="flex-wrap  w-100" >
       </div>
     </div>
     <!-- call and whatsapp buttons -->
@@ -117,7 +117,7 @@
 </div>
 <!-- ------------------------------- -->
 <!-- footer -->
-<footer class="container-fluid bg-dark text-light " width="100%" heigh="auto">
+<footer class="container-fluid bg-dark text-light mb-0 " width="100%" heigh="auto">
     <div class="row ">
         <div class=" col-lg-4 text-center mt-5 ">
         <img src="./assets/vi logo 2-01.png" style="margin-left: 2em;" width="80" height="auto" alt="">
@@ -149,7 +149,7 @@
     </div>
     </div>
     <hr>
-    <div class="container  text-center">
+    <div class="container  text-center pb-2">
     <div class="row gap-5 mb-3 " >
     <div class="col-lg-6 text-warning">Copyright © 2024 MK ASSOCIATES</div>
     <div class="col-lg-5 text-warning"> Developed by Spark Web Tech</div>
